[LEARNER-489] Fix discount data text overlap on the receipt page

--- a/ecommerce/static/sass/partials/views/_receipt.scss
+++ b/ecommerce/static/sass/partials/views/_receipt.scss
@@ -306,7 +306,7 @@
         }
 
         .order-total {
-            margin-left: 60%;
+            margin-left: 50%;
 
             padding: 20px 0;
 
@@ -334,7 +334,7 @@
             .price {
                 float: right;
 
-                margin-right: 12%;
+                margin-right: 10%;
 
                 color: black;
             }
@@ -343,6 +343,14 @@
 
     .wrapper-content-main {
         margin-bottom: 20px;
+    }
+}
+
+/* Medium devices (laptop, 1200px and lower) */
+@media (max-width: $screen-md-max) {
+    .discount {
+        display: block;
+        margin-top: 10px;
     }
 }
 
